<resources>
    <!-- App Title -->
    <string name="app_name">RoutineU!</string>
    <!-- Register Place Type Activity Title -->
    <string name="title_activity_register_place_type">Cadastro de Tipos de Locais</string>
    <!-- Main Activity -->
    <string name="main_txt_title">RoutineU!</string>
    <string name="main_txt_no_routine">Você não possui nenhum trajeto em curso!</string>
    <string name="main_txt_routine_list">Últimos Trajetos</string>
    <!-- Main Routine Activity -->
    <string name="main_transit_txt_title">Você está em trânsito!</string>
    <string name="main_transit_txt_confirmation">Ei, já acabou o trajeto?</string>
    <string name="main_transit_txt_from_title">ORIGEM</string>
    <string name="main_transit_txt_to_title">DESTINO</string>
    <string name="main_transit_txt_save_button">Cheguei!</string>
    <!-- Register/Update Routine Activity -->
    <string name="register_routine_txt_bar_title">Cadastrar Trajeto</string>
    <string name="update_routine_txt_bar_title">Atualizar Trajeto</string>
    <string name="register_routine_txt_title">Vamos para onde?</string>
    <string name="update_routine_txt_title">Cadastrou errado? Mude abaixo!</string>
    <string name="register_routine_txt_from">Local de Origem *</string>
    <string name="register_routine_txt_from_date">Data e Horário de Origem *</string>
    <string name="register_routine_txt_to">Local de Destino *</string>
    <string name="register_routine_txt_to_date">Data e Horário de Chegada *</string>
    <string name="register_routine_txt_save_button">Pé na estrada!</string>
    <string name="update_routine_txt_save_button">Atualizar</string>
    <string name="register_routine_txt_in_course">TRAJETO_EM_CURSO</string>
    <string name="register_routine_txt_from_date_button">Escolher</string>
    <!-- Register Place Type Activity -->
    <string name="register_place_type_txt_title">Cadastro de Tipo de Locais</string>
    <string name="update_place_type_txt_bar_title">Atualização de Tipo de Locais</string>
    <string name="update_place_type_txt_title">Atualize o tipo desse local!</string>
    <string name="register_place_type_txt_name">Nome *</string>
    <string name="register_place_type_txt_save_button">Salvar</string>
    <string name="update_place_type_txt_save_button">Atualizar</string>
    <string name="register_place_type_txt_clear_button">Limpar</string>
    <!-- Register/Update Place Activity -->
    <string name="register_place_txt_title">Cadastro de Locais</string>
    <string name="update_place_txt_bar_title">Atualização de Locais</string>
    <string name="update_place_txt_title">Atualize esse local!</string>
    <string name="register_place_txt_name">Nome *</string>
    <string name="register_place_txt_type">Tipo *</string>
    <string name="register_place_txt_address">Endereço</string>
    <string name="register_place_txt_city">Cidade</string>
    <string name="register_place_txt_state">Estado</string>
    <string name="register_place_txt_country">País</string>
    <string name="update_place_txt_save_button">Atualizar</string>
    <!-- Place Type List Activity -->
    <string name="list_place_types_txt_title">Tipos Cadastrados</string>
    <!-- Place List Activity -->
    <string name="list_place_txt_title">Locais Cadastrados</string>
    <!-- Routine List Activity -->
    <string name="list_routines_txt_title">Últimos Trajetos</string>
    <!-- Button Default Messages -->
    <string name="txt_save_button">Salvar</string>
    <string name="txt_clear_button">Limpar</string>
    <string name="txt_cancel_button">Cancelar</string>
    <!-- Main Menu -->
    <string name="main_menu_txt_new_routine">Adicionar Trajeto</string>
    <string name="main_menu_txt_list_places">Locais</string>
    <string name="main_menu_txt_routine_history">Histórico</string>
    <!-- Place List Menu -->
    <string name="place_list_menu_txt_new_place">Adicionar Local</string>
    <string name="place_list_menu_txt_place_type_list">Tipos de Locais</string>
    <!-- Place Type List Menu -->
    <string name="place_type_list_menu_txt_new">Adicionar Tipo</string>
    <string name="routine_list_menu_txt_new">Adicionar Trajeto</string>
    <!-- Multiple Selection Menu -->
    <string name="main_menu_selected_txt_edit">Editar Item</string>
    <string name="main_menu_selected_text_remove">Remover Item</string>
    <!-- Initial Types -->
    <string name="types_txt_college">Faculdade</string>
    <string name="types_txt_work">Trabalho</string>
    <string name="types_txt_home">Casa</string>
    <string name="types_txt_bookstore">Livraria</string>
    <string name="types_txt_doctor">Médico</string>
    <!-- Toast/Modal Messages -->
        <!-- Fields -->
        <string name="txt_clear_field_toast">Campo limpo com sucesso!</string>
        <string name="txt_clear_fields_toast">Campos limpados com sucesso!</string>
        <!-- Register/Update Place Type -->
        <string name="update_place_type_txt_name_used">Tipo de Local em uso em locais cadastrados!</string>
        <string name="update_place_type_txt_names_used">Algum tipo de local dos itens selecionados está em uso em locais cadastrados!</string>
        <!-- List/Delete Place Type -->
        <string name="txt_confirmation_msg_delete_place_type_modal">Realmente deseja apagar esse(s) tipo(s) de local(is)?</string>
        <!-- Register/Update Place -->
        <string name="register_place_type_txt_name_empty">Nome do tipo está vazio!</string>
        <string name="register_place_type_txt_name_used">Nome do tipo já existente!</string>
        <string name="register_place_txt_name_empty">Nome do local está vazio!</string>
        <string name="register_place_txt_name_used">Nome do local já existente!</string>
        <string name="update_place_txt_name_used">Local em uso em trajetos cadastradas!</string>
        <string name="update_place_txt_names_used">Algum local dos itens selecionados está em uso em trajetos cadastrados!</string>
        <!-- List/Delete Place -->
        <string name="txt_confirmation_msg_delete_place_modal">Realmente deseja apagar esse(s) local(is)?</string>
        <!-- Register Routine -->
        <string name="register_routine_txt_empty_places">Cadastre ao menos dois locais antes de cadastrar um trajeto!</string>
        <string name="register_routine_txt_origin_destination_equals">Local de origem não pode ser o mesmo de destino!</string>
        <!-- List/Delete Routine -->
        <string name="txt_confirmation_msg_delete_routine_modal">Realmente deseja apagar esse(s) trajeto(s)?</string>
        <string name="txt_error_msg_register_routine_toast">Não foi possível criar esse trajeto! Tente novamente mais tarde.</string>
        <string name="txt_error_msg_update_routine_toast">Não foi possível atualizar esse trajeto! Tente novamente mais tarde.</string>
        <!-- ORMLite Error -->
        <string name="txt_error_ormlite">Aconteceu um erro inesperado! Tente novamente mais tarde.</string>
        <!-- Routine in Course -->
        <string name="txt_confirmation_msg_cancel_routine_modal">Tem certeza que quer cancelar o trajeto?</string>
        <string name="txt_confirmation_msg_finish_routine_modal">Já acabou mesmo esse trajeto?</string>
        <!-- Modal Options -->
        <string name="txt_button_ok_modal" translatable="false">Ok</string>
        <string name="txt_button_cancel_modal">Cancelar</string>
        <string name="txt_button_yes_modal">Sim</string>
        <string name="txt_button_no_modal">Não</string>
        <!-- Modal Titles -->
        <string name="txt_warning_title_modal">Aviso</string>
        <string name="txt_confirmation_title_modal">Confirmação</string>
    <!-- Shared Preferences -->
    <string name="preferences_routine_in_course" translatable="false">me.davikawasaki.routineapp.userroutineapp.ROUTINE_IN_COURSE_PREFERENCE</string>
    <!-- About application -->
    <string name="about_txt_title">Sobre a Aplicação</string>
    <string name="about_txt_app_details">Aplicativo de registro de rotinas do usuário, cadastrando locais e períodos percorridos pelo mesmo.</string>
    <string name="about_txt_author" translatable="false">Davi Kawasaki - RA 1137280</string>
    <string name="main_menu_txt_about">Sobre</string>
    <!-- Plural selection -->
    <plurals name="selected">
        <item quantity="one">%d selecionado</item>
        <item quantity="other">%d selecionados</item>
    </plurals>
</resources>
