<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.davikawasaki.routineapp.userroutineapp.RegisterRoutineActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="me.davikawasaki.routineapp.userroutineapp.RegisterRoutineActivity">

            <TextView
                android:id="@+id/textRegisterRoutineTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register_routine_txt_title"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textRegisterRoutineFromTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/register_routine_txt_from"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textRegisterRoutineTitle" />

            <Spinner
                android:id="@+id/spinnerRegisterRoutineFrom"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textRegisterRoutineFromTitle" />

            <TextView
                android:id="@+id/textRegisterRoutineFromDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/register_routine_txt_from_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerRegisterRoutineFrom" />

            <TextView
                android:id="@+id/textRegisterRoutineFromDateInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/buttonRegisterRoutineFromDate"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textRegisterRoutineFromDateTitle" />

            <Button
                android:id="@+id/buttonRegisterRoutineFromDate"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="selectDateTime"
                android:text="@string/register_routine_txt_from_date_button"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textRegisterRoutineFromDateTitle" />

            <TextView
                android:id="@+id/textRegisterRoutineToTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/register_routine_txt_to"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textRegisterRoutineFromDateInput" />

            <Spinner
                android:id="@+id/spinnerRegisterRoutineTo"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textRegisterRoutineToTitle" />

            <TextView
                android:id="@+id/textRegisterRoutineToDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/register_routine_txt_to_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerRegisterRoutineTo" />

            <TextView
                android:id="@+id/textRegisterRoutineToDateInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/buttonRegisterRoutineToDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textRegisterRoutineToDateTitle" />

            <Button
                android:id="@+id/buttonRegisterRoutineToDate"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/register_routine_txt_from_date_button"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textRegisterRoutineToDateTitle" />

            <Button
                android:id="@+id/buttonRegisterRoutineCancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="32dp"
                android:onClick="closeActivity"
                android:text="@string/txt_cancel_button"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonRegisterRoutineSave"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonRegisterRoutineToDate" />

            <Button
                android:id="@+id/buttonRegisterRoutineSave"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="save"
                android:text="@string/register_routine_txt_save_button"
                android:textColor="@android:color/background_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonRegisterRoutineCancel"
                app:layout_constraintTop_toBottomOf="@+id/buttonRegisterRoutineToDate" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.widget.LinearLayout>
